--- a/main.html
+++ b/main.html
@@ -1,16 +1,185 @@
-<!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>f1-c3-bootstrao-july</title>
+    <link rel="stylesheet" href="./style.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+       <!-- navbar......    -->
+       <nav class="navbar navbar-expand-lg bg-light position-sticky top-0 section-nav " id="navbar-bootstrap">
+        <div class="container-fluid">
+          <a class="navbar-brand ps-5" href="#">Complex UI</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button> 
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Section1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Section2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Section3</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit" data-bs-target="">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <!-- section-1 -->
+      <section >
+        <img class="w-100" src="./assets/corousel -image1.jpg" alt="corousel-image">
+      </section>
 
+      <!-- section-2-->
+      <section class="container section-2">
+         <div class="cards d-flex">
+            <div class="card">
+                <div class="card-image"><img class="w-100" src="https://images.unsplash.com/photo-1661956602139-ec64991b8b16?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHx8&auto=format&fit=crop&w=600&q=60 "  alt="image"></div>
+                <p class="pt-1 px-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam fuga eaque adipisci fugiat nulla ipsam excepturi odio at porro. Provident!</p>
+            </div>
+            <div class="card">
+                <div class="card-image"><img class="w-100" src="https://images.unsplash.com/photo-1690354600391-3e64397b5129?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="image"></div>
+                <p class="pt-1 px-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam fuga eaque adipisci fugiat nulla ipsam excepturi odio at porro. Provident!</p>
+            </div>
+            <div class="card">
+                <div class="card-image"><img class="w-100" src="https://images.unsplash.com/photo-1690391941899-e32d5f99f330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60"  alt="image"></div>
+                <p class="pt-1 px-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam fuga eaque adipisci fugiat nulla ipsam excepturi odio at porro. Provident!</p>
+            </div>
+         </div>
+      </section>
+
+      <!-- section-3 -->
+      <section></section>
+     <!-- section-4 -->
+       <section class=" container d-flex justify-content-between mt-5 flex-wrap">
+        <div class="card  card-bootstrap">
+            <img class="p-2 section-4-card-image"  src="https://images.unsplash.com/photo-1690535922441-939fb8e6e933?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0MHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card card-bootstrap" style="width: 18rem;">
+            <img class="p-2 section-4-card-image"  src="https://plus.unsplash.com/premium_photo-1690164161383-f5ff30a790bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1885&q=80" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card card-bootstrap" style="width: 18rem;">
+            <img class="p-2 section-4-card-image" src="https://images.unsplash.com/photo-1690395782424-81ae275080aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2NXx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+      </section>
+
+      <!-- Footer -->
+<footer class="text-center text-lg-start bg-white text-muted">
+    <!-- Section: Social media -->
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom flex-wrap">
+      <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+  
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5 d-flex flex-wrap">
+        <!-- Grid row -->
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful Links
+            </h6>
+            <p>
+              <a href="#!" >Angular</a>
+            </p>
+            <p>
+              <a href="#!">React</a>
+            </p>
+            <p>
+              <a href="#!">Vue</a>
+            </p>
+            <p>
+              <a href="#!">Laravel</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              More Links
+            </h6>
+            <p>
+              <a href="#!" >Pricing</a>
+            </p>
+            <p>
+              <a href="#!" >Settings</a>
+            </p>
+            <p>
+              <a href="#!" >Orders</a>
+            </p>
+            <p>
+              <a href="#!">Help</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4 ms-3">Contact</h6>
+            <p><i class="fas fa-home me-3 text-secondary"></i>bnlgadesh, BY 10012, US</p>
+            <p>
+              <i class="fas fa-envelope me-3 text-secondary"></i>
+              info@example.com
+            </p>
+            <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
+            <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+    <!-- Copyright -->
+    <!-- <div class="d-flex w-100"><div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+      © 2021 Copyright:
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+    <button class="btn btn-primary">Back to top</button>
+    </div> -->
+    <!-- Copyright -->
+  </footer>
+  <section style="background-color: rgba(0, 0, 0, 0.025);">
+  <div class="d-flex w-100 justify-content-between align-items-center flex-wrap sub-footer">
+    <p class="text-reset fw-bold text-center p-4 ms-5 ps-5" href="https://acciojob.com/">
+        © 2021 Copyright: <a class="text-decoration-none" href="http://acciojob.com">Acciojob.com</a></p>
+    <button class="btn btn-primary m-4" ><a class="text-decoration-none text-white" href="#" target="#navbar-bootstrap">Back to top</a></button>
+  </div>
+  <!-- <button class="btn btn-primary">Back to top</button> -->
+   <!-- </div> -->
+  </section>
+  <!-- Footer -->
+    
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
-
 </html>
+
